--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -908,4 +908,372 @@ Router-xb(dhcp-config)#
 - 可以检查**数据包的源地址和目的地址**，根据源网络或者目的网络、子网、主机的IP地址决定数据包的过滤操作。
 - 扩展访问控制列表除了检查源地址和目的地址外，还可以**检查指定的协议**，根据数据包头中的协议类型进行过滤，比如***IP协议，ICMP协议、TCP协议和UDP协议***等
 - 扩展访问控制列表的表号是**100-199**，扩展的表号是2000-2699。
-### 
+### 配置IP访问控制列表
+- IP访问控制列表是一个连续的列表，至少由一个 ***"permit（允许）"语句和一个或多个"deny（拒绝）"语句*** 组成。
+- IP访问控制列表用***名字（name)或表号（number）***标识和引用;
+- 在配置IP访问控制列表的首要任务就是使用 ***“access-list"或“ip access-lint"命令*** ，定义一个访问控制列表；
+- access-list命令要求只能使用***表号***标识列表，而ip access-list命令可以使用**表号**或者**名字**标识列表；
+#### 配置顺序
+- 在配置过滤规则时，**ACL语句顺序**很**重要**；路由器执行ACL是按照配置的访问控制列表中**条件语句**来决定的；数据包**只有在跟第一个判断条件不匹配时，才能被交给ACL中下一个条件语句进行比较**;***（ACL采用“首次匹配”原则）***
+![[Pasted image 20250827123543.png]]
+- 若要允许"202.204.4.2"以外的所有源地址通过路由器，这时就需要先配置“deny 202.204.4.2"在配置"permit any any"
+- 在通配符掩码位中，***0表示“检查数据包的IP地址相对应的比特位"，1表示"不检查（忽略）数据包中的IP地址相对应的比特位”。***
+- ***通配符any：代替0.0.0.0 255.255.255.255，代表所有主机。***
+- ***通配符host：与整个IP主机地址的所有位相匹配，可以使用缩写字"host"***
+- 例如: Router(config)# access-list 1 deny 172.33.160.29 0.0.0.0
+等于: Router(config)# access-list 1 deny host 172.33.160.29
+##### 使用access-list命令（第二个可以加反码的命令） 
+- ①配置ACL
+- access-list用**表号**区分，标准（1-99）ACL仅针对源进行控制，扩展（100-199）ACL针对源、目标、**某种协议**、端口号进行控制。
+- 标准：**access-list表号{permit丨deny}源地址+源反码**
+- 扩展：**access-list表号{permit丨deny})协议+源地址+源反码+目的地址+目的反码+操作+端口号**
+- 其中，*operator（操作）有lt（小于）、gt（大于）、eq（等于）、neq（不等于）几种；operand指的是端口号。*
+- ②应用到接口
+- 命令格式：**ip access-class <表号>{in|out}**，**虚拟接口下**。
+- 命令格式：：**ip access-group<表号>{in丨out}**
+- 其中access-list-number指出连接到这个接口的访问控制列表表号；**inlout指示该ACL是应用到入站接口还是出站接口**。
+- 如果in和out都没有指定，那么**默认地认为是out。**
+##### ip access-list命令
+- ip access-list用standard丨extended区分，标准（1-99）ACL仅对源进行控制、扩展（100-199）ACL针对源、目标、**某种协议**、端口号进行控制。
+-  **①ip access-list{standard|extended}表号|表名**，*在用到表名的时候就没办法通过表号区间来区别标准和扩展了，所以要加大括号中的一项制定标准还是扩展*
+- 其中，standard|extended分别表示访问控制列表的类别(标准|扩展)
+- ② ***（标准ACL）*** ：**permit丨deny协议+源地址+源反码**
+- ***(扩展ACL）***：**permit丨deny协议+源地址+源反码+目的地址+目的反码+操作+端口号**
+# 无线局域网设备的安装与调试
+## 蓝牙技术与标准（纯背诵）
+- 蓝牙技术是一个开放性的、短距离无线通信技术标准，它可以在**较小的范围**内通过**无线连接**的方式。实现固定设备以及移动设备之间的网络互连，可以在各种数字设备之间实现灵活、安全、低成本、小功耗的话音和数据通信
+### 主要参数和技术指标
+- 工作频段：**ISM频段2.402～2.480GHz**
+- 标称数据速率：1Mbps
+- 异步信道速率：**非对称连接723.2kbps/57.6kbps**；**对称连接433.9kbps（全双工模式)**
+- 同步信道速率：**64kbps** 
+- 信道间隔：**1MHz**  
+- 信道数：**79**
+- 功率：**0dBm（1mW）**，**覆盖1～10m**；**20dBm(100mW）**，**覆盖扩展至100m**
+- 跳频速率：**1600次/s**
+- 跳频点数：**79个频点/MHz**
+- 数据连接方式：面向连接业务SCO、无连接业务ACL。
+- 秘钥：8bit为单位递减，最长128bit
+## HiperLAN
+HiperLAN是无线局域网通信标准的一个子集，有HiperLAN/1和HiperLAN/2两类。
+![[Pasted image 20250827124803.png]]
+- 在HiperLAN/2网络中，移动终端（MT）通过**接入点（AP）** 接入固定网，一个AP（无线访问接入点）**所覆盖的区域定义为一个小区**，在室内一个小区的覆盖范围一般为**30m**，在室外一般为**150m**。
+### 特点
+- 面向连接：与其他无线局域网技术不同，在HiperLAN/2网络中数据的传输是***面向连接（TCP）*** 的。
+- 高传输速率：采用先进的**OFDM调制技术**，HiperLAN/2物理层最高可达**54Mbps**。
+- QoS支持：HiperLAN/2的面向连接的特性有利于实现对QoS的支持。
+- 自动频率分配：在每一个接入点覆盖区域中，AP能自动选择适合的无线信道进行数据传输。
+- 安全性：HiperLAN/2支持认证和加密。
+- 移动性：MT能够自动向最近的AP发射并接受数据从而进行通信。
+- 网络与应用无关：HiperLAN/2协议栈具有一个灵活的结构，很容易适配并扩展不同固定网络。
+- 省电：在HiperLAN/2中，MT节省功耗的机制使基于MT启动的休眠期状态。
+### IEEE802.11标准
+IEEE802.11是第一代无线局域网WLAN标准之一，在1997年6月被IEEE委员会认可。
+#### 工作方式
+802.11定义了两种类型的设备：无线结点和无线接入点；无线结点通常是在一台接入设备上加上一块***无线网络接口卡 (网卡)*** 构成的；无线接入点的作用是提供**无线和有线网络**之前的桥接；
+#### IEEE 802.11物理层
+- IEEE802.11物理层包括**两个扩频技术**和**一个红外传播规范**，无线传播的频道定义在**2.4GHz的ISM波段（无需注册）** 内。扩频技术保证了IEEE802.11的设备在这个频段上的可用性和可靠的吞吐量，保证同频段不受影响。
+- IEEE802.11无线标准定义的传输速率是**1Mbps和2Mbps**，可以使用**调频扩频**(FHSS)和**直序扩频**（DSSS）技术。FHSS和DSSS技术在**运行机制上是完全不同的**,所以采用这两种技术的设备**没有互操作性**。
+### IEEE802.11数据链路层
+- IEEE802.11的MAC层采用了**CSMA/CA协议**（带有冲突避免的载波侦听多路访问）或者**DCF (分布式协调功能)** 来解决介质访问控制的问题；
+- CSMA/CA利用**ACK信号**来避免冲突的发生，当客户端收到网络上返回的ACK信号后才确认发出的数据已经正确到达目的地。CSMA/CA提供无线的共享访问，显式的ACK机制在处理无线问题上非常有效。
+### 各标准比较（重点）
+![[Pasted image 20250827125508.png]]
+### IEEE802.11b的运行模式
+802.11b运行模式基本分为两种：点对点模式和基本模式。
+- **点对点模式**：指**无线网卡和无线网卡**之间的通信方式。只要PC插上无线网卡即可与另一具有无线网卡的PC连接，最多可以连接**256台PC**。
+- 基本模式：指**无线网络规模扩充或无线和有线网络并存时**的通信方式；插上无线网卡的PC需要由接入点与另一台PC连接。接入点负责频段管理与漫游管理，一个接入点最多可连接**1024台PC**
+### IEEE802.11b的典型解决方案
+#### 对等解决方案
+一种最简单的应用方案，**只要给每台计算机安装一片无线网卡**，即可相互访问，如果需要**与有线网路连接，可以为其中一台计算机再安装一片有线网卡**，无线网中其余计算机即利用这台计算机作为网关，访问有线网路或共享打印机设备；对等解决方案是一种点对点方案，网络中的计算机**只能一对一互相传送消息，而不能同时进行多点访问**。
+#### 单点接入解决方案
+无线接入点可以连接周边的无线网络终端，形成**星形网络结构**，并与有线网络相连，使整个无线网的终端都能访问有线网络的资源，并可通过路由器访问lnternet;
+#### 节点接入解决方案
+当网络规模较**大**，可以**采用多个独立的自主接入点**，分别与有线网络相连，从而形成以有线网络为主干的多接入点的无线网络。统一无线网络：无线局域网控制器可以对多个接入点**实现动态分配信道，优化发射功能，自动修复**无线覆盖范围，用户漫游与安全性管理等功能。
+#### 其他的考的不多的
+![[Pasted image 20250827130017.png]]
+## 常用无线局域网设备
+无线局域网主要包括以下硬件设备：**无线网卡、无线接入点（AP）、天线，以及无线网桥、无线路由器和无线网关**。
+- 无线网卡：也叫WLAN适配器，是无线局域网系统中最基本的硬件。只要**两台计算机各自拥有无线网卡**，就可以实现**点对点**的通信，从而组成一个最小的无线局域网
+- 无线接入点：也被称为无线AP，基本功能是**集合无线或者有线终端**。一个无线AP一般可以连接30台左右的无线网络终端或者是其他的无线AP。
+- 天线：是连接AP，提高无线信号数据传输的稳定性和可靠性。
+- 无线网桥：主要用于**连接几个不同的网段**，实现**较远距离**的无线数据通信。
+- **无线路由器**和**无线网关**是具有路由功能的AP，***具有NAT功能***，可以建立一个无线局域网。
+## 安装和调试无线接入点
+### Cisco Aironet 1100简介
+CiscoAironet1100是无线局域网收发器的一种，主要是用于独立无线网络的中心点或**无线网络和有线网络之间的连接点**。兼容IEEE802.11b和IEEE802.11g，工作在2.4GHz频段，使用的是IOS操作系统
+![[Pasted image 20250827140811.png]]
+### 将接入点接入网络
+- ①安装无线接入点之前，先向网络管理员询问以下信息：
+- 系统名
+- 无线网络中对大小写敏感的服务集标识符（SSID）
+- 简单网络管理协议（SNMP）集合名称以及SNMP文件属性
+- 如果没有连接到DHCP服务器，则需要为接入点指定一个唯一的IP地址
+- 如果接入点与PC不在同一个子网内，则需要子网掩码和默认网关
+- ②使用**线内供电**连接以太网的步骤如下
+- 首先将以太网电缆的一端连接到接入点上标有Ethernet的RJ-45以太网接口。
+- 然后电缆的另一端连接至：
+- 1.带有线内供电交换面板，如CiscoCatalyst系列线内供电面板。
+- 2.带有线内供电的交换机，如CiscoCatalyst3524-PWR-XL交换机。
+- 3.Cisco Aironet电源注入器上标有To AP/Bridge的一端。标有To Network的另一端连接到10/100Mbps以太网。
+- ③使用**本地电源连接**以太网的步骤如下。
+- 首先将以太网电缆的一端连接到接入点上标有Ethernet的RJ-45以太网接口。
+- 然后将电源模块的输出端接到DC48V电源接口。
+- 最后将电源模块的另一端接到AC100~250V电源插座。
+### 配置无线接入点
+- **第一次**配置无线接入点，**一般采用本地配置方式**，民即无需将无线接入点连接到一个有线的网络中，默认的IP地址是***10.0.0.1***，并成为**小型的DHCP的服务器**。接入点可以为设备分配的IP地址多达***20个10.0.0.x范围内的IP地址***。
+- **以下为重点！**
+- **tsunami也重要**
+![[Pasted image 20250827141304.png]]
+![[Pasted image 20250827141355.png]]
+- **Yes和no的区别重要**
+- **首次配置无需指定SSID**
+## 统一无线网络原理与设计（考的少）
+- 传统无线局域网架构：以无线接入点（AP）为中心，各AP见相互独立，需分别进行配置
+- 存在缺点：管理无线网络安全性困难；无线网络与有线网络间无合适区域对数据
+### 解决方案
+- 将WLAN的部署、安全、管理和控制功能集中在一个中央平台，**无线局域网控制器(AC)**
+- AC由众多AP共享，AP和AC可位于**同一个VLAN或IP子网中，也可以位于两个完全不同的IP子网中。**
+- AP和AC之间采用隧道通信，隧道通常由**控制信息隧道**和**数据隧道**组成;
+- AP和AC必须使用数字证书彼此认证对方，通常出厂时每台设备都预安装了一个X.509证书，有助于冒充的AP和AC无法进入网络。
+![[Pasted image 20250827142529.png]]
+![[Pasted image 20250827142459.png]]
+### 无线统一网络中AC功能
+![[Pasted image 20250827142613.png]]
+### 无线统一网络中AP工作机制
+#### AP供电
+AP使用**直流电**，可采取下列方式之一给LAP供电：
+- ①AC适配器：若AP附近有电源，可通过适配器直接将电源连接到AP
+- ②PoweroverEthernet（PoE）：可使用内置电源或lEEE802.3af方法，通过交换机端口和以太网电缆给AP供电。
+- ③电源注入器：被插入到交换机端口和AP以太网连接之间，将AP适配器直接插入到电源注入器中。（在LAP连接的交换机不支持PoE时使用）
+#### AP启动
+![[Pasted image 20250827142804.png]]
+# 网络信息服务系统的安装和配置（此章中简单的都用图片了）
+## DNS
+![[Pasted image 20250827143015.png]]
+![[Pasted image 20250827143806.png]]
+### DNS服务器分类
+- 根服务器：在Internet上有**13个根DNS服务器（标号为a~m）**;
+- 顶级域名服务器：负责顶级域名（如com、edu、net、org和gov等）和所有国家的顶级域名（如cn等）。
+- 权威DNS服务器：在Internet上具有公共可访问主机的每个组织结构必须提供公共可访问的DNS记录。
+### DNS配置主要参数
+- **①正向查找区域**：将*域名映射到IP地址**的数据库，用于将域名解析为IP地址。在大部分的DNS查询请求中，客户端一般执行正向查找。
+- **②反向查找区域**：将**IP地址映射到域名**的数据库，用于将IP地址解析为域名。DNS允许客户端在名称查询期间使用已知的IP地址，并根据它查找计算机的域名。
+- ③资源记录：区域中的一组结构化记录。常用的资源记录有3个：
+- 主机地址（A）资源记录，它将DNS域名映射到IP地址；
+- 别名（CNAME）资源记录，将别名映射到标准DNS域名；
+- 邮件交换器（MX）资源记录，为邮件交换器主机提供邮件路由。
+- ④转发器：**转发器也是一个DNS服务器**，是本地DNS服务器用于将**外部**DNS名称的DNS查询**转发**给**该DNS**服务器。
+### DNS服务器安装与配置
+DNS服务器在Windows2003Server操作系统
+#### 配置
+- 为Windows Server 2003服务器设置固定的IP地址;
+- 安装DNS服务器（**缺省情况下，未安装DNS服务器，根服务器不需要手动添加（自动）**）
+- 创建正向查找区域、反向查找区域；（反向查找区域**可手工/自动添加（均可）**指针记录）
+- 创建主机地址资源记录（**主机记录的生存时间是指该记录在客户机缓存中持续时间**)
+- 测试DNS服务器（在命令窗口使用**nslookup进行正向测试/反向测试（均可）**）
+- **ipconfig/flushdns可清除DNS缓存**
+## DHCP
+![[Pasted image 20250827144756.png]]
+### 工作原理
+- 第一次请求
+![[Pasted image 20250827145453.png]]
+- *互相之间都不知道ip*
+- **客户机全部以缺省地址0.0.0.0来发送自己的喊话，喊话全部是广播地址255.255.255.255**
+- 续租
+![[Pasted image 20250827152229.png]]
+### DHCP主要参数
+- 作用域：是**网络上IP地址的完整连续范围**。作用域通常定义为接受DHCP服务的网络上的单个物理子网。（DHCP服务器新建作用域时，必须输入的信息是**起始IP地址和结束IP地址**）
+- 排除范围：是指从**DHCP作用域中排除出去的、有限的IP地址**。使用排除范围，可以保证服务器不将这些范围内的地址分配给DHCP客户机。（DHCP服务器添加排除时必须输入**起始IP地址**)
+- 地址池：在定义了作用域和排除范围后，剩余的、可用的地址就构成了“地址池”。服务器**可将地址池内的IP地址动态分配给DHCP客户机**。
+- 保留：可使用“保留”创建DHCP服务器指派的永久地址租约，可以保留一些特定的IP地址供DHCP客户机**永久使用**，确保子网上指定的设备始终使用相同的IP地址。**保留地址可以使用作用域地址范围内的任何一个IP地址，即使该IP地址处于排除范围之内**。
+- 租约：是由DHCP服务器指定的一段时间，**在此时间内客户机可使用指派的IP地址**。租约期限决定了租约何时期满以及客户机需要向服务器对它进行更新的频率。
+- 选项：是DHCP服务器在向DHCP客户机提供租约时可指派的其他客户机配置参数。
+### DHCP服务器安装
+- DNS服务器在Windows 2003 Server操作系统。
+- 为Windows Server 2003服务器**设置静态IP地址**
+- 在Windows Server 2003下安装DHCP服务器
+- 在Windows Server 2003下配置DHCP服务器
+- 管理DHCP数据库
+- 测试DHCP服务器
+### 用于测试的命令
+- 在DHCP客户机的命令行窗口中，使用**ipconfig/all命令，可以查看客户机获得的IP地址及其他配置信息情况。**
+- 在DHCP客户机的命令行中执行**ipconfig/release命令，可以释放已经获得的地址租约**。
+- 在DHCP客户机的命令行中执行**ipconfig/renew命令，可以重新从DHCP服务器获得新的地址租约。**
+### DHCP中继代理
+- 功能：可以**实现在不同子网和物理网段之间处理和转发DHCP信息**。
+- 如果DHCP客户机与DHCP服务器在**同一个物理网段**，则客户机可以**正确地获得动态分配的ip地址**。
+- ***如果不在同一个物理网段，则需要DHCP Relay Agent(中继代理）（地址分配从中继代理所处的地址池中去分配IP地址）***。
+- 用DHCPRelay代理可以**去掉在每个物理的网段都要有DHCP服务器的必要**，它可以传递消息到不在同一个物理子网的DHCP服务器，也可以将服务器的消息传回给不在同一个物理子网的DHCP客户机。
+![[Pasted image 20250827153128.png]]
+## WWW
+WWW(World Wide Web），简称为"万维网”，是互联网上最流行的信息浏览检索工具。WWW分为Web客户端和Web服务器程序。WWW可以让Web客户端（常用浏览器）访问浏览Web服务器上的页面。WWW提供丰富的文本、图形、音频视频等多媒体信息，并将这些内容集合在一起，使得用户可以方便地在各个页面之间进行浏览。由于WWW内容丰富，浏览方便，目前已经成为互联网最重要的服务。
+### 工作原理
+WWW采用客户机/服务器的工作模式，
+- Web浏览器向一个特定的Web服务器发出Web页面请求。
+- Web服务器收到请求后，查找符合条件的Web页面，并将该页面信息回传给发送请求的Web浏览器。
+- Web浏览器将接收到的Web页面展示给用户。
+### 安装配置
+- 使用IP地址测试网站
+- 使用域名测试网站
+- 访问Web站点的方式主要是在客户机浏览器的地址栏中***输入域名、IP地址+端口号的形式***；若**TCP端口为默认**，则**输入域名或者IP地址、IP地址+端口号**都可访问该网站；如果TCP端口**不是默认**的，只能采用**IP地址+端口号**访问访问该网站；
+![[Pasted image 20250827154224.png]]
+## E-mail
+- 电子邮件地址通常由两部分构成，例如 2964793117@qq.com，第一部分是**信箱名**
+（2964793117），**第二部分为邮件服务器的域名**（qq.com），两者之间使用@隔
+开。
+- 发送方的邮件服务器软件在发送邮件时根据**域名**来确定要连接的接收方邮件服务器。
+- 接收邮件服务器软件则使用**信箱名**来选择对应的邮箱将接收到的邮件存储起来。
+### 相关协议
+电子邮件系统使用的协议主要有***SMTP、POP3和IMAP4***；
+- SMTP：简单邮件传输协议，用于**发送**电子邮件，默认TCP端口为**25**；
+- POP：邮局协议，用于电子邮件的**接收、访问和读取**，使用TCP的**110**端口。现在常用的是第三版，简称为POP3；
+- 邮件客户端可以通过IMAP协议从邮件服务器上**获取邮件信息、下载邮件**（管理邮件）等。
+- IMAP协议运行在**TCP/IP**协议之上，默认使用的TCP端口为143，目前使用的是第四版，即IMAP4;
+- **发送：SMTP**
+- **接收：POP和IMAP**
+![[Pasted image 20250827154925.png]]
+### 主要参数
+![[Pasted image 20250827155032.png]]
+### 安装和配置
+- E-mail服务器的安装、配置任务
+- 在WindowsServer2003下安装Winmail邮件服务器（由于***Winmail邮件服务器支持基于Web方式的访问和管理，因此在安装邮件服务器软件前，要安装IIS***）;
+- 在WindowsServer2003下配置Winmail邮件服务器；
+- 测试Winmail邮件服务。
+![[Pasted image 20250827155211.png]]
+![[Pasted image 20250827155227.png]]
+![[Pasted image 20250827155303.png]]
+![[Pasted image 20250827155313.png]]
+### 使用浏览器访问和管理Winmail Mail Server邮件服务器
+①创建邮件服务器的访问与管理Web站点；
+②设置网站的选项和Winmail邮件服务器的目录及文件的访问权限；
+网站创建完成后，对相关的属性进行修改，在文档属性的默认文档中增加index.php添加应用扩展名名映射，添加PHPweb应用服务扩展。
+***如果要通过域名访问邮件服务器，还应在DNS服务器中增加邮件服务器主机地址资源记录和IP地址***
+③通过浏览器登录邮件服务器或注册新用户；
+***是否允许客户自行注册新邮箱是由管理员在邮件服务器的域参数中配置的***
+④使用浏览器管理邮件服务器
+### 邮件交换器设置
+- 为了能使其他邮件服务器将收件人的邮件转发到该服务器，需要建立邮件路由。
+- 在DNS服务器中建立**邮件服务器主机记录和邮件交换器记录**。
+### 测试邮件服务器
+- 使用Outlook等客户端软件只能**访问**Winmail邮件服务器不能**管理**Winmail邮件服务器；
+- 是否允许客户自行注册新邮箱是由**管理员在邮件服务器的域参数中设置**，如果在域参数设置中允许用户注册新邮箱，Winmail邮件服务器在运行中就可以允许用户自行注册新邮箱;
+- Winmail邮件服务器允许用户使用Outlook建立好的邮件账户，但**不支持用户使OutLook自行注册新邮件**，用户自行注册新邮箱时需输入邮箱名、密码等信息，而**域名是服务器固定**的，并不能自行设置
+![[Pasted image 20250827155735.png]]
+## FTP文件传输协议
+![[Pasted image 20250827155822.png]]
+### 主要考点
+- ①FTP服务器的默认端口号为**21**，**配置时也可输入选定的端口号**；
+- ②SerV_U FTP服务器中每个虚拟服务器由**IP地址和端口号唯一识别**；
+- ③FTP服务器的域创建完成后**管理员手动添加用户**，才能被客户端访问；服务器的用户包括**匿名用户（anonymous）和命名用户**;
+- ④最大上传速度和最大下载速度：是指整个FTP服务器占用的带宽，默认情况使用所有可用带宽。
+- ⑤最大用户数：是指**同时在线的最大用户数**；
+- ⑥IP地址可为空（表示服务器所有IP地址），服务器有**多个IP地址或使用动态IP地址**时，**IP地址设置为空**。
+- ⑦对于**小的域应选择.INI文件存储**，对于大的域（用户数大于500）应选择**注册表**可以提供更高的性能
+### 主要参数
+![[Pasted image 20250827160357.png]]
+### 流程
+![[Pasted image 20250827160444.png]]
+![[Pasted image 20250827160450.png]]
+![[Pasted image 20250827160509.png]]
+# 网络安全技术
+## 数据备份策略
+### 分类
+- 从备份模式来看，可以分为**物理备份**和**逻辑备份**；
+- 重点：从备份**策略**来看，可以分为**完全备份、增量备份和差异备份**；
+- 根据备份服务器在备份过程中是否可以接收用户想要和进行数据更新，又可以分为**离线备份**和**在线备份**（或者称为冷备份和热备份）；
+### 三大备份
+#### 完全备份
+完全备份（fullbackup）是指对用户所指定的**所有数据文件或整个系统进行全面备份**，是一种常用的数据备份方式；
+- 优点：直观，容易理解，可以快速的恢复所丢失的数据 **（数据恢复时间短）**
+- 缺点：①因为要备份所有的数据，每次备份的工作量很大，所以需要**大量的备份介质**。
+- ②**不能频繁的备份**，否则会存在大量重复的数据，占用大量的备份空间，会增加成本。
+- ③备份大量数据时，所需的时间会很长。
+#### 增量备份
+增量备份（incremental backup）只是备份那些自上次**完全备份或增量备份后**新创建的、被修改过的文件，即只备份所有发生变化的文件；**(每次备份都是新base，所以每次都只保留当前diff)**
+- 优点：①更快、更小（备份速度更快，所占空间更小）；
+- ②可进行频繁备份（偶尔进行完全备份后，频繁进行增量备份）；
+- 缺点：恢复比较麻烦
+#### 差异备份
+差异备份（differential backup）与增量备份相似，**只备份新创建的或修改过的数据**。但两者的区别在于，差异备份是累积的，一个文件只有自上次**完全备份后**被修改过或者是新创建的，则在以后每次进行差异备份时都会被备份，直到下一次完全备份为止;**（以上一次完全备份为base，保存当前diff和上次完全备份后的所有diff）**
+- 优点：无须频繁的做完全备份，**工作量小于完全备份**，备份所需时间短，节省存
+储空间；
+- 缺点：每次备份的任务比**增量备份的工作量大，但数据恢复相对简单**；
+![[Pasted image 20250827161651.png]]
+## 加密技术
+- **加密就是利用密码学的方法对信息进行伪装**，使得未授权者不能识别和理解其真正的含义，也不能伪造、篡改和破坏数据；
+- 经过授权的接收者在收到密文后，进行与加密相逆的变换，**去掉密文的伪装，恢复明文的过程称为解密**；
+- 加密和解密组成加密系统，明文和密文统称为报文。将信息从明文加密成密文，在从密文转换回明文的整个系统称为密码系统；
+### 加密技术
+#### 对称加密技术
+对称加密技术（又称为密钥密码技术）是指**加密系统的加密密钥和解密密钥相同**，或者虽然不同，但可以从其中一个密钥推导出另一个密钥。使用对称加密方法，加密方和解密方必须使用同一种加密算法和相同的密钥；
+- **数据加密标准（DES）** 算法是最经典的对称密钥加密算法，DES算法使用64位的密钥长度，其中8位用奇偶校验，用户可以使用其余的56位。
+- **国际数据加密（IDEA）** 算法是一个对称分组密码，明文和密文都是64位，密钥长度为128位，它的速度和能力类似于DES，但是更加安全。
+- 其他比DES更安全的对称加密算法，如** **等。
+- **采用对称加密算法，网络中N个用户之间进行加密通信，需要密钥个数是N*（N-1)**。
+#### 非对称加密技术
+非对称加密技术对信息的加密于解密使用不同的密钥，用来**加密的密钥**是可以公开的，用来解密的私钥是**需要保密**的，因此又被称为公钥加密技术；
+- 目前，常用的公钥算法包括：**RSA算法、DSA算法、ECC椭圆曲线算法、PKCS算法与PGP算法等。**
+- RSA公钥加密算法是目前因特网上进行保密通信和数字签名的最有效的加密算法之一，**RSA体制多用在数字签名、密钥管理和认证等方面**。
+- 采用非对称密钥技术算法，网络中**N个用户**之间进行加密通信，需要**2N个密钥**
+## 入侵检测技术
+入侵检测技术就是对入侵行为进行检测的技术。
+### 入侵检测系统分类
+根据数据来源和系统结构的不同，入侵检测系统可以分为**基于主机的入侵检测系统**和**基于网络的入侵检测系统**;
+- ①基于主机的入侵检测系统（HIDS）：通常在被重点检测的主机上**运行一个代理程序**，用于监视、检测对于主机的攻击行为，通知用户并进行响应。
+- **！！！！** ②基于网络的入侵检测系统一般通过将**网卡设置成“混杂模式”** 来收集在网上出现的数据帧，可采用的基本识别技术包括：**模式匹配**、**频率或阈值、事件的相关性**、**统计意义上的非正常现象检测**
+### 分布式入侵检测系统
+分布式入侵检测系统将数据收集和部分数据分析功能分布在网络中的不同主机运行，很大程度上解决了集中式入侵检测系统处理能力有限、容易单点失效等缺点 **（集中式最容易出现单点故障）**;
+- 分布式的入侵检测系统有**层次式、协作式和对等式**3种类型。
+- **对等式**：对等模型的应用是的分布式入侵检测系统***真正的避免了单点失效的发生***;
+### 入侵检测系统的部署
+网络入侵检测系统一般由控制台和探测器组成。
+- 控制台：**提供图形界面来进行数据查询**，查看警报并配置传感器。**一个控制台可以管理多个探测器。**
+- 探测器的基本功能是**捕获网络数据包**，并对数据包进一步分析和判断，当发现可疑事件时触发探测器发送警报。
+- 控制台和探测器之间的通信是**加密传输**的。
+#### 三种部署方式
+- **利用交换设备的镜像功能**：网络接口卡与交换设备的监控端口连接，***通过交换设备的Span/Mirror功能***将流向各端口的数据包复制一份给监控端口，入侵检测传感器的Span/Mirror功能将流向各端口的数据包复制一份给监控端口，入侵检测传感器从监控端口获得数据包进行分析和处理。
+- 在网络链路中**串接一台集线器**：在网络中增加一台集线器改变网络拓扑结构，通过集线器 ***（共享式监听方式）*** 获取数据包
+- 在网络链路中**串接一台（TAP）分路器**：入侵检测传感器通过一个TAP（分路器）设备对交换式网络中的数据包进行分析和处理。
+![[Pasted image 20250827205426.png]]
+![[Pasted image 20250827205509.png]]
+### 入侵防护系统
+入侵防护系统（IPS），是将**防火墙技术**和**入侵检测技术**进行整合并**采用In-line的工作模式**的系统，该系统倾向于提供主动防护，其设计宗旨是预先对入侵活动和攻击性网络流量进行拦截，避免其造成损失。
+#### 分类
+入侵防护系统主要分为基于主机的入侵防护系统、基于网络的入侵防护系统和应用入
+侵防护系统;
+- ***基于主机的入侵防护系统（HIPS）***：**是安装在受保护的主机系统**中，检测并阻挡针对本机的威胁和攻击，可以通过**监视内核的系统调用来阻挡攻击并记录日志**。**HIPS可以阻断缓冲区溢出、改变登录口令、改写动态链接库**或其他试图从操作系统夺取控制权的入侵行为，整体提升主机的安全水平。
+- **基于网络的入侵防护系统（NIPS）**：***布置于网络出口处***，一般串联与防火墙与路由器之间，网络进出的数据流都必须通过它，从而保护整个网络的安全。因为攻击的误报 **（漏报不会）** 将导致合法的通信被阻断，导致拒绝服务，而性能不足会带来合法通信的延迟、甚至称为网络的瓶颈。
+- **应用入侵防护系统（AIPS）** 是由**基于主机的入侵防护系统发展而来**，一般***部署在应用服务器前端***，进而保证了应用服务器的安全性。应用入侵防护系统能够防止诸多入侵，包括***SQL代码嵌入、缓冲区溢出、畸形数据包，cookie篡改、参数篡改、强制浏览、数量类型不匹配以及其他已知漏洞攻击***。应用入侵防护系统通常部署在面向互联网的应用系统之前，能够成为应用服务器的重要安全屏障。
+## 防病毒技术
+计算机病毒是指编制或者在计算机程序中插入的破坏**计算功能**或者**毁坏数据**以影响计算机使用，并能自我复制的一组计算机指令或者程序代码。
+### 网络病毒
+指在网络上传播，并对网络系统进行破坏的病毒。
+### 恶意代码
+是一种程序，通常是在不被察觉的情况把代码寄宿到另一段程序中，进而通过运行有入侵性或破坏性的程序
+- 蠕虫：计算机蠕虫是一个自我包含的程序（或程序集），与计算机病毒的区别：**蠕虫不需要把自身附加在宿主程序上，而是一个独立的程序，能够主动运行**。
+- 木马：寄生在用户的计算机系统中，盗用用户信息，并通过网络发送给黑客（**木马是没有自我复制功能的恶意程序**）
+### 网络版防病毒系统结构
+网络版防病毒软件采用分布式的体系结构，整个防病毒体系是由4个相互关联的子系统组成：**系统中心、服务器端、客户端、管理控制平台**。各个子系统协同工作，共同完成对整个网络的病毒防护工作；
+- **系统中心**：是网络版防病毒系统信息管理和病毒防护的自动控制核心。它能实时记录防护体系每台计算机上的病毒监控、检测和清除信息。其他子系统只有在系统中心工作后，才可以实现各自的网络防护功能。**（系统中心必须先于其他子系统安装到符合条件的服务器上）**
+- **服务器端**：服务器端是专门为**可以用于网络服务器的操作系统**而设计的防病毒子系统。
+- **客户端**：客户端是**专门为网络工作站(客户机）** 设计的防病毒子系统，承担中对当前工作站上病毒的实时监控、检测、清除任务，同时自动向系统中必报告病毒检测情况。
+- **管理控制台**：专门为网络管理员设计的，对网络防病毒系统进行设置，使用和控制的操作平台。**它既可以安装到服务器上，也可以按照到客户机上，根据网络管理员的需要，可自由安装。**
+#### 安装
+##### 系统中心的安装:
+- 要求：**先在服务器上安装系统中心**，然后再进行其他模块的安装;
+- 安装系统中心时，安装程序将在该服务器上同时**安装一套服务器端系统和一套管理控制台系统**。
+- 安装系统中心的计算机应具备条件：**全天候开机、可以方便地连接lnternet**;
+##### 控制台的安装
+- 通过**光盘安装和远程安装**两种方式，无论采用何种方式系统管理员都可以将管理控制台安装在其他计算机上;
+- 它**既可以安装到服务器上，也可以按照到客户机上，视网络管理员的需要，可自由安装。**
+##### 服务器和客户端的安装
+- 本地安装：直接利用安装程序在本地完成安装的方法，**客户端和服务器都可以采用这种方式**。
+- 客户端远程安装：系统管理员可以通过管理控制台，给指定的系统客户端执行远程安装的操作;
+- Web安装：用户通过浏览指定位置的网页版防病毒软件的安装。
+- 脚本登录安装：实现网络版防病毒软件快速自动安装的一种方法。
+#### 网络防病毒系统主要参数配置
+![[Pasted image 20250827211448.png]]
+![[Pasted image 20250827211510.png]]
+***根据可信计算机系统评估准则（TESEC），用户能定义访问控制要求的自主保护类型系统属于C类***
+***根据可信计算机系统评估准则（TCSEC），不能用于多用户环境下重要信息处理的系统属于D类***
