计算机三级知识点笔记结束

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -1275,5 +1275,186 @@ WWW采用客户机/服务器的工作模式，
 #### 网络防病毒系统主要参数配置
 ![[Pasted image 20250827211448.png]]
 ![[Pasted image 20250827211510.png]]
+
 ***根据可信计算机系统评估准则（TESEC），用户能定义访问控制要求的自主保护类型系统属于C类***
 ***根据可信计算机系统评估准则（TCSEC），不能用于多用户环境下重要信息处理的系统属于D类***
+## 防火墙
+- 防火墙指的是一个由**软件和硬件设备组合**而成的，在**内部网**和**外部网**之间、**专用网**和**公共网**之间的界面上构造的保护屏障，是一种获取安全性的形象说法;
+- 防火墙主要由**服务访问规则**、**验证工具**、**包过滤**和**应用网关**4个部分组成。
+- 通常布置在企业内部网络和外部公告网络之间，企业中一些需要对外提供服务的服务器（如FTP、WWW、E-mail）通常部署在**防火墙的DMZ区**。
+### 防火墙的网络接口
+- 外部网络区域是指企业外部网络，也称为外网，如lnternet、第三方网络等，**是互联网络中不被信任的区域**。当外部区域想要访问内部区域的主机和服务时，可以通过对防火墙进行设置实现外部网络的有限制访问。
+- 内部网络是指企业内部网络，或者企业内部网络的一部分，也称为内网。**它是互联网络中的信任区域，应受到防火墙的保护**。如企业内部的各个部门之间的局域网。
+- **DMZ（也称停火区）** 是一个隔离的网络，或几个网络。位于停火区中的主机或服务器被称为堡垒主机。一般在停火区内可以放置Web服务器、Mail服务器等。
+#### PIX 525防火墙访问管理模式
+- ①非特权模式
+- PIX防火墙**开机**自检后，就是处于**非特权模式**，系统显示为“pixfirewall"
+- ②输入 **“enable”** 进入特权模式，可以改变当前配置，显示为“pixfirewall#（多一个#号）"
+- 输入“**enable**”进入特权模式，可以改变**当前配置**，显示为“pixfirewall#"
+- ③配置模式
+- 输入"**configure terminal**"进入配置模式，绝大部分的**系统配置**都在这里进行。显示"pixfirewall(config)#"
+- ④监视模式
+- 在PIX防火墙在开机或重启过程中，按住**Escape**键或发送一个“Break”字符，即可进入监视模式，这里可以**更新操作系统映像和进行口令恢复**。显示为“monitor>”
+#### PIX525防火墙基本配置
+防火墙有9个基本配置命令：nameif、interface、ip address、nat、global、route、static、conduit、 fixup。
+- ***①nameif：用于配置防火墙接口的名字，并指定安全级别***。
+- 配置示例：
+Pix525(config)#**nameif ethernet0 outside security0**
+Pix525(config)#**nameif ethernet1 inside secyrity100**
+Pix525(config)#**nameif dmz security50**
+- 在默认配置中，**以太网0**端口被命令为**外部接口（outside）**，安全级别是**0**；**以太网1**端口被命名为**内部接口（inside）**，安全级别是**100**。安全级别取值范围为**1～99**，数字越大级别越高。
+- ***②nat：指定要进行转换的内部地址***
+- 配置: Pix525(config)#nat(static) 1 192.168.0.4 255.255.255.0
+- nat作用是将**内网的私有IP地址转换为外网的共享IP地址**。**nat命令总是与global命令一起使用**，因为nat命令可以指定**一台主机或一段范围的主机**访问外网，访问外网时需要利用global所指定的地址池进行访问。
+- ***③ global：指定外部地址范围（地址池）***
+- 配置: Pix525(config)#global(outside)1 202.112.10.4-202.112.10.16
+- 内网的主机通过防火墙要访问外网时，防火墙将使用这段IP地址池为要**访问外网的主机分配一个全局IP地址。**
+
+- ***需要先用global命令制定一个可以转化的ip地址池，然后用nat命令访问外网（使用地址池中的某个ip）***
+
+- ④ static：**配置静态nat**，static命令用于创建内部IP地址和外部IP地址之间的静态映射。
+![[Pasted image 20250828123123.png]]
+- ⑤conduit：管道命令
+- conduit命令配置语法：***conduit permit丨deny （protocol） （global_ip） [port] foreign_ip [netmask]***
+- 其中，**permit | deny表示允许或拒绝访问；protocol指的是连接协议。Global_ip指的是先前由global或static命令定义的全局IP地址；port指的是服务所有作用的端口Foreign_ip表示可访问global_ip的外部IP**。
+- 配置1: Pix525 (config)# conduit permit tcp host 192.168.0.3 **eq www（代指80端口）** any（任意来源ip）
+- 含义：配置允许任何外部主机对全局地址192.168.0.3的这台主机进行HTTP访问。
+- ⑥fixup：配置FIXUP协议
+- fixup命令的作用是**启用、禁止、改变一个服务或协议**PIX防火墙的端口，由fixup命令指定的端口是PIX防火墙要侦听的服务。
+- eg:配置1：启用FTP协议，并指定FTP的端口号位22。
+Pix525(config)#***fixup protocol ftp 22***
+配置2：禁用SMTP协议。
+Pix525(config)#***no fixup protocol smtp（未跟端口号时用该协议的默认端口号）***
+# 网络管理技术
+## SNMP **(Simple Network Management Protocol)：主要基于 UDP（用户数据报协议）​**​
+![[Pasted image 20250828130328.png]]
+- SNMP管理模型是Internet组织用来管理**TCP/IP**互联网和以太网，有三个组成部分：**管理站、代理和MIB**，其管理模型是一个**Manager/Agent**模型，*类似于Clinet/Sever模式*。
+- 管理站（Manager）通过SNMP定义的PDU向代理（Agent）发出请求，而Agent将得到的MIB值通过SNMP协议传送给Manager。
+![[Pasted image 20250828130711.png]]
+### SNMP版本
+- SNMPv1是**最基本、最简单的**；SNMPv2主要弥补**版本1在安全方面的缺陷**；：SNMPv3**加强了安全性并且与SNMPv1具有很好的兼容性**；
+- SNMP采用一种分布式的结构，**一个管理站可以管理控制多个代理**；反之，**一个代理可以被多个管理站所管理、控制**。**（所以是多对多的关系）**
+### SNMP管理站和代理
+- SNMP采用“**团体**”实现安全控制，每个团体都被指定拥有一个**团体名**。一个团体包括一个代理和若干个管理控制该代理的管理站；
+- 管理站和代理之间发送、接收报文时必须以团体名进行认证，只有**团体名正确、认证通过，报文才能被接收**。一个团体可以规定具有一种**访问模式（主要有read-only和read-write两种）**。
+### 管理信息库MIB-2
+- MIB-2采用树形结构描述，相当于管理数据库，每个MIB-2对象都有一个唯一的***对象标识符（OID）来标识和命令***。
+- MIB-2库中对象值数据类型是有**三种简单类型和应用类型**。
+- 简单类型包括**整数（32位）、8个一组的字符串和对象标识符**；
+- 应用类型包括***IP地址、计算器、计量器、时钟***等。
+- 时钟类型用来记录从某个事件的发生开始到目前为止所经过的时间，***单位是0.01s***;
+- 计数器类型是一个非负的整数，**从0开始逐步增加但不能减少**，一直增加到最大，然后回到0在从头开始;
+- 计量器和计数器相似，唯一区别是***计量器的值可以增加也可以减少，而且增加到最大值以后不归0，而是不再增加（封顶），但可以降下来***。
+### SNMP支持的操作
+- SNMP支持的操作主要有：***获取（Get）、设置（Set）、通知（Notification）***，每种操作都有相应的PDU格式；
+- **①Get操作**：用于管理站向代理查询被管理设备上的MIB库数据，分为Get和GetNext两个操作，分别查询*指定对象的值*和查询*指定对象的下一个相邻对象的值*。
+- 当管理站需要查询时，向某个代理发出包含有 **“团体名”和GetRequestPDU（GetNextRequestPDU）的报文**；代理收到这样的请求报文后，根据要求提取MIB库数据，构成了一个包含有同样“团体名”和**GetResponsePDU的报文**，发给管理站;
+- **②Set操作**：用于管理站命令代理对被管理设备上MIB库中的对象值进行设置;
+- 当管理站需要修改被管理设备上MIB库的某个数据时，就向某个代理发出包含**有“团体名”和SetRequestPDU的报文**。代理收到请求报文后，执行设置操作并返回包含有**GetResponsePDU的报文**。
+- ***注意！！***：团体字的访问模式必须是***read-write时才能实现Set操作***
+- ③Notification操作：用于代理主动向管理站报告被管理对象的某些变化。该操作又可以分为**自陷（Trap）和通知（lnform）**两类
+- Trap：又称为"中断”或“陷入”；每当出现Trap情况时，代理就会向管理站发出包含**有“团体名”和TrapPDU的报文(发送自陷消息本来就不会得到恢复)**。
+- Inform: **需要SNMP管理站确认接收的Trap**，当管理站收到一条Inform通知后需要**向发生者回复一条确认信息**。
+### SNMP配置命令（不考大题）
+- ①创建或修改对SNMP团体名的访问控制
+- 命令格式：(config)# snmp-server community<团体名>[view<视阀名>] [{ro | rw}] [访问控制表号]
+在配置的过程中，**代理和管理站配置的团体名要相同（要唯一标识）**；
+视阀名规定了本团体内访问管理信息库的范围；
+ro l rw：用来设置管理站对代理的操作权限，**ro为只读，rw为可读写**；
+访问控制表号是一个介于**1～99的整数**。
+- ②创建或修改一个SNMP视阀
+- 命令格式：(config)#**snmp-server view**<视阀名><对象标识符或子树>{included｜excluded}
+参数说明如下:
+视阀名，管理人员指定的一个字符串;
+对象标识符或子树，是在这个视阀中***包含（included）或排除（excluded）*****的MIB库对象的标识符** 
+例如：建议一个视阀，名为part-object，它包括MIB-2库中系统组的所有对象和Cisco私
+有库的所有对象。
+(config)#snmp-server view part-object system included
+(config)#snmp-server view part-object cisco included
+![[Pasted image 20250828132156.png]]
+![[Pasted image 20250828132219.png]]
+## ICMP（Internet Control Message Protocol）​
+- ICMP工作在**网络层**，是一种管理协议，用于**在IP主机、路由器**之间传递消息和差错报告。
+- 在网络中，比如使用ping命令检查网络通不通，其执行过程就是运用ICMP工作过程。
+- ICMP消息被封装在**IP数据包**内，通过IP包传送的ICMP信息主要是涉及错误操作的报告和回送给源结点的关于IP数据包处理情况的消息；
+- ICMP的功能是**报告问题**，**无法纠正错误，纠正错误的任务由发送方完成**。
+![[Pasted image 20250828140503.png]]
+### 功能
+- ①通告网络错误
+- 当数据包在传输过程中，如果不出现网络不可达 **（网络出现故障）**、主机不可达 **（IP地址错误）** 、协议不可达（**目的节点不支持数据包中指定的高层协议**）、端口不可达（**数据包指定的目的端口在目的节点无效**）等错误，相关路由器或主机上的ICMP会向源节点发送一个“目标不可达”的ICMP报文。
+- ②通告网络拥塞
+- 当**路由器或目标主机因缓存满来不及处理而丢弃IP数据包**时，它会向发送数据包的源节点发出一个“源抑制”的ICMP报文。源节点收到这个报文后会降低发送速度。
+- ③协助查找网络故障
+- ICMP支持Echo（回送）功能，在两个主机之间发送一个往返的数据包。当网络中一个节点主动向另一个节点发出“**Echo请求**”报文，其中包含着这个报文的标识和序列号，收到该报文的节点则**必须**向源节点发出"**Echo应答**”报文。
+- **Ping**命令即是利用这个功能，在网络上传输一系列数据包，测量平均往返时间并计算丢包率。
+- ④通告超时
+- 每个IP数据包的包头部分有一个***8比特的“生存期”（TTL）*** 字段，取值范围是0~255。IP数据包在传输过程中，每经过一个路由器，**该字段的值便减1**。
+- 一个IP数据包从源节点出发时，它的TTL已被预先设定一个数值，在传输过程中如果该**IP包的TTL降低到零，路由器就会丢弃此包，这时会生成一个“超时（time exceeded）的ICMP报文，通告这一事实。**
+- **trace**就是一种基于上述功能的通用网络管理工具，它**通过发送小TTL值的包及监视ICMP超时通告来探知网络路由**
+![[Pasted image 20250828141041.png]]
+## Windows 2003网络管理
+![[Pasted image 20250828141125.png]]
+![[Pasted image 20250828141252.png]]
+- **net view显示域列表、计算机列表或指定计算机上共享资源列表**
+- **net statistic：显示本地工作站或服务器服务的统计日志**
+![[Pasted image 20250828141315.png]]
+- **考的最多**
+![[Pasted image 20250828141407.png]]
+- **pathping检测本机配置DNS服务器是否工作正常**
+- **route可修改主机默认网关设置**
+## 网络攻击和漏洞查询
+![[Pasted image 20250828141929.png]]
+### 常见协议欺骗攻击
+- **ARP欺骗攻击**:利用ARP协议漏洞，通过伪造IP地址和MAC地址实现ARP欺骗的攻击技术。
+- **IP欺骗攻击**：通过伪造某台主机的IP地址来骗取特权，进行攻击。
+- **DNS欺骗攻击**：攻击者通过这种欺骗手段，使用户查询（DNS）服务器进行域名解析时获得一个错误的IP地址，从而引|导用户访问一个错误的站点。
+- **源路由欺骗攻击**：通过指定路由，以假冒身份与其他主机进行合法通信或者发送假报文，使受攻击主机出现错误动作。
+- **拒绝服务攻击（DoS）**：**即攻击者通过发送大量合法的请求或数据来占用和消耗过多的服务资源**，使得网络服务不能响应正常的请求。
+#### 常见DOS
+- Smurf攻击：攻击者冒充受害主机的lP地址，向一个大的网络发送echorequest的定向广播包，此网络中很多主机都做出回应，受害主机会收到大量echoreply消息。
+- **SYN洪泛滥（SYNFlooding）**：是利用**TCP连接的三次握手**过程进行攻击。攻击者主机使用无效的IP地址，与被攻击主机进行TCP的三次握手。
+- Ping of Death：是通过构造出重组缓冲区大小的异常的**ICMP包**进行攻击。
+- **分布式拒绝服务攻击（DDoS）**：指通过很多“僵尸主机”（被攻击者入侵过或可间接利用的主机）向受害主机发送大量**看似合法的网络包**，从而造成受害主机无法处理而拒绝服务。
+- **Teardrop攻击**：指利用**os处理分片**重叠报文的漏洞进行攻击。
+- **Land攻击**：指向**某个设备发送数据包**，并将数据报的源IP地址和目的IP地址都设置成攻击目标的地址
+### 漏洞查找
+扫描分为**被动和主动，被动扫描对网络上流量进行分析**，不产生额外的流量，也不会导致系统的崩溃；**主动扫描则更多带有入侵的意味，可能会影响网络系统的正常运行**。
+![[Pasted image 20250828142502.png]]
+![[Pasted image 20250828142535.png]]
+## 网络故障查找和排除
+![[Pasted image 20250828153846.png]]
+![[Pasted image 20250828153944.png]]
+![[Pasted image 20250828154033.png]]
+![[Pasted image 20250828155701.png]]
+## NetFlow协议
+NetFlow协议：基于IP流记录的流量监测方法涉及的重要协议。
+- 工作原理：将所有经过设备的数据包按照一定的规则进行汇聚，然后缓存在设备内存中，当满足预设的条件后，将缓存数据以**UDP包的形式**发送到指定的服务器。
+- IETE标准规范RFC 3917 IPFIX 以NetFIowv9为蓝本。
+- NetFlow流记录格式主要有v1、v5、v7、v8、v9五个版本，其中**v5在路由器上使用最广泛**。
+### 结构
+NetFlowl以***流 (Flow)作为数据采集的基本单位***。
+流：特定源和目的端的单向数据报文序列，即源IP、目的IP、源端口、目的端口、**三层协议**、服务类型和路由器入口7个属性相同的报文作为一条流。
+#### NetFlow三层协议
+![[Pasted image 20250828155930.png]]
+![[Pasted image 20250828160030.png]]
+### Cisco路由器NetFlow配置（只用记标黑体的）
+- 配置接口
+Router(config) # interface f0/0
+Router(config-if) # **ip route -cache flow**
+Router(config-if) # exit
+- 采集服务器的IP地址和监听端口
+Router(config) #**ip flow -export destination 202.113.79.25 9996**
+- 配置输出版本
+Router(config) #***ip flow -export version 5***
+- 配置生成警告和显示故障排除数据时间（默认30min）
+Router(config) # ip flow -cache timeout active 1
+- 配置NetFlow的数据源（一般交换机上建议配置loopback0)
+Router(config) # ip flow - export source loopback 0
+- 保存配置
+Router # write
+- 查看NetFlow的配置信息
+Router(config) # exit
+Router(config) #**sh ip flow export**
+- 查看netflow采集到的信息
+Router(config) # **sh ip cache flow**
+Router(config) # **sh ip cache verbose flow**
