再次修改格式问题

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -206,7 +206,7 @@ D：Destination（目的地）
 - **128位**表示一个IPv6地址，每**16位划分8个位段（所以说每段转化为16进制数后为4位），每个位段转化为16进制数，用冒号隔开**
 - IPv6每个段的**前导0可以省略，不可把位段中的有效0压缩**
 - 若包含一长串0，可以把***连续位段均为0的地方简写为：：，且这种写法只可在一个地址中出现一次（尤其注意只可出现一次）***
-- ***IPv6只支持前缀长度表示法​**​*：在表示一个IPv6网络或子网时，​**​不能​**​像IPv4那样使用“子网掩码”（如 `255.255.255.0`），而​**​必须​**​使用“斜杠记法”（CIDR记法），即在IPv6地址后面加上一个斜杠`/`和一个表示网络位长度的数字（如 `/64`）
+- ***IPv6只支持前缀长度表示法​***​ ：在表示一个IPv6网络或子网时，​**​不能​**​像IPv4那样使用“子网掩码”（如 `255.255.255.0`），而​**​必须​**​使用“斜杠记法”（CIDR记法），即在IPv6地址后面加上一个斜杠`/`和一个表示网络位长度的数字（如 `/64`）
 
 # 路由设计基础
 ## IP路由选择
@@ -453,8 +453,8 @@ Switch-3528-TEST(config) # ***interface fastethernet0/1***（fast ethernet顾名
 Switch-3528-TEST(config-if) #
 
 ##### 步骤二：关闭或开启端口
-Switch-3528-TEST(config-if) # **shutdown (关闭端口)***
-Switch-3528-TEST(config-if）#**no shutdown(开启端口，使端口处于工作状态)***
+Switch-3528-TEST(config-if) # **shutdown (关闭端口)**
+Switch-3528-TEST(config-if）#**no shutdown(开启端口，使端口处于工作状态)**
 #### 配置交换机端口的通信方式
 Switch-3528-TEST(config-if）#***duplex auto***（设置为自动协商（自适应），默认为止
 种方式)
@@ -514,8 +514,8 @@ Switch-6509-TEST>(enable) set vlan 100 name vlan 1000
 ### 为交换机端口分配VLAN
 #### Cisco IOS系统 (35系列)
 ##### 步骤一：进入端口配置模式
-Switch-3528-TEST # ***configure terminal******（进入全局模式下）***
-Switch-3528-TEST(config) # ***int f0/1***（int是interface简写）
+Switch-3528-TEST # ***configure terminal*** ***（进入全局模式下）***
+Switch-3528-TEST(config) # ***int f0/1*** （int是interface简写）
 Switch-3528-TEST(config-if) #
 ##### 步骤二：为端口分配VLAN
 - 命令格式： ***switchport access vlan （vlan-num）***
@@ -554,9 +554,9 @@ Switch-3528-TEST(enable)
 - eg:Switch-6509-TEST>(enable) set trunk 1/24 on dot1q (配置VLAN Trunk模式, 封装VLAN协议)***解析：1/24表示模块1上的24端口，on是mode的开启模式，还有off，dot1q是协议type***
 Port(s) 1/24 trunk mode set to on
 ##### 设置允许或删除中继的VLAN
-- 命令格式：***set trunk <mod/port> vlan （vlan id）******允许VLAN***
+- 命令格式：***set trunk <mod/port> vlan （vlan id）*** ***允许VLAN***
 - eg:Switch-6509-TEST>(enable) set trunk 1/24 vlan 11-20 （在端口1/24的允许VLAN列表中添加11-20号vlan)
-- 命令格式：***clear trunk<mod/port> vlan******删除VLAN***
+- 命令格式：***clear trunk<mod/port> vlan*** ***删除VLAN***
 - eg:Switch-6509-TEST>(enable) clear trunk 1/24 13-15 (在端口1/24的允许VLAN删除13-15号vlan)
 ## 交换机的VTP设置
 ![[Pasted image 20250826122820.png]]
@@ -575,7 +575,7 @@ VLANs的建立、删除和重命名
 ### Cisco IOS系统(35系列)
 #### 配置VTP域名
 - Switch-3528-TEST # configure terminal(进入工作模式)
-- Switch-3528-TEST ***(config)***# ***vtp domain （domain-name）******（设置VTP域名，同一个域的所有交换机，必须设置相同的域名，同时VTP协议的版本号必须一致）***
+- Switch-3528-TEST ***(config)***# ***vtp domain （domain-name）*** ***（设置VTP域名，同一个域的所有交换机，必须设置相同的域名，同时VTP协议的版本号必须一致）***
 #### 配置VTP工作模式
 - Switch-3528-TEST(config)# ***vtp mode server***(设置VTPServer模式，默认值）
 - Switch-3528-TEST(config)# ***vtp mode client*** (设置为VTP Clinet模式)
