添加部分大题考点

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -1455,3 +1455,26 @@ Router(config) #**sh ip flow export**
 - 查看netflow采集到的信息
 Router(config) # **sh ip cache flow**
 Router(config) # **sh ip cache verbose flow**
+# 大题常考命令
+## 路由器综合配置
+### 路由器基础
+![[Pasted image 20250912201309.png]]
+![[Pasted image 20250912201521.png]]![[Pasted image 20250912201549.png]]
+![[Pasted image 20250912201617.png]]
+### DHCP部分
+![[Pasted image 20250912201701.png]]![[Pasted image 20250912201729.png]]
+![[Pasted image 20250912201800.png]]
+![[Pasted image 20250912201821.png]]
+### ACL部分
+![[Pasted image 20250912201837.png]]
+## 交换机配置
+![[Pasted image 20250912202011.png]]
+![[Pasted image 20250912202028.png]]**vlan data进入vlan设置**
+![[Pasted image 20250912202111.png]]
+![[Pasted image 20250912202135.png]]![[Pasted image 20250912202151.png]]
+## DHCP报文分析
+![[Pasted image 20250912202701.png]]![[Pasted image 20250912202807.png]]![[Pasted image 20250912202845.png]]
+![[Pasted image 20250912202958.png]]![[Pasted image 20250912203055.png]]
+![[Pasted image 20250912203117.png]]![[Pasted image 20250912203208.png]]
+**如果使用 wareshark捕获报文（题中会给）则,Src x.x.x.x,Dst x.x.x.x**
+![[Pasted image 20250912203323.png]]![[Pasted image 20250912203427.png]]
