大题完结，进入总复习

--- a/NCRF/计算机三级——网络技术.md
+++ b/NCRF/计算机三级——网络技术.md
@@ -1478,3 +1478,30 @@ Router(config) # **sh ip cache verbose flow**
 ![[Pasted image 20250912203117.png]]![[Pasted image 20250912203208.png]]
 **如果使用 wareshark捕获报文（题中会给）则,Src x.x.x.x,Dst x.x.x.x**
 ![[Pasted image 20250912203323.png]]![[Pasted image 20250912203427.png]]
+## 抓包分析
+### DNS和ICMP
+![[Pasted image 20250914114645.png]]
+![[Pasted image 20250914115520.png]]
+- 第一条DNS请求的IP地址（S）是主机地址，（D）为DNS服务器的IP地址
+   - DNS NAME=（第一条报文）后有跟着要访问的域名
+- ICMP报文的**Time-to-live考察主机执行的tracert+域名**
+  - ICMP有多条消息，第一个路由地址是ICMP的第一条报文，考察功能也就是**路由也是主机配置的网关，即访问域名时首先发送到默认路由器**，如果要问功能，**只需要答“路由”**
+  - 第二个IP地址的功能**也是路由**
+  - 下面的信息为选中报文的详细信息，查看协议protocol即为该报文协议。其中一个完整报文的部分信息段中的Source address**仍然是本主机的源地址，可能与该条报文的写着的源地址并不一样**
+![[Pasted image 20250914133424.png]]
+### FTP 
+![[Pasted image 20250914133516.png]]
+- JACKSON：主机地址，但这里是主机名，需要找其对应的详细信息
+  - DNS服务器地址IP
+- 443为加密URL：https://
+- **TCP协议号为6**
+- **SYN对应的Flags为02**
+![[Pasted image 20250914134152.png]] 
+**目的地址和详细地址观察一不一致，如果不一致则证明最终的整体目的为大报文的目的地址为准!**
+![[Pasted image 20250914134444.png]]
+#### DNS解析问题
+![[Pasted image 20250914135041.png]]
+- 出现多个域名。以**后解析的为准，有时会解析出多个，但只访问后一个**
+- echo，echo应答为ping命令
+![[Pasted image 20250914135218.png]]
+![[Pasted image 20250914135358.png]]![[Pasted image 20250914135449.png]]
